--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Nekofy",
-    "version": "1.0",
+    "version": "1.1",
     "description": "Replaces all images on the page with a random waifu image from a selected category.",
     "icons": {
         "16": "icons/icon16.png",
@@ -10,7 +10,8 @@
     },
     "permissions": [
         "activeTab",
-        "storage"
+        "storage",
+        "scripting"
     ],
     "host_permissions": [
         "https://api.waifu.pics/*"
